tests/rosetta/out/Scala/15-puzzle-solver.scala
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
object _15_puzzle_solver {
  def main(args: Array[String]): Unit = {
    object testpkg {
      def Add(a: Int, b: Int): Int = a + b
      val Pi: Double = 3.14
      val Answer: Int = 42
    }
    
    println(testpkg.FifteenPuzzleExample())
  }
}
